...
              backgroundColor: theme.backgroundElement,
              borderRadius: 14,
              padding: 16,
            }}
          >
            <TextInput
              placeholder="姓名，如：爷爷"
              value={name}
              onChangeText={() => setNameError(false)}
            />
            {nameError ? (
              <Text
                style={{ paddingVertical: 2 }}
...
